objects/Route_Schedule__c.object
<CustomObject>
    <description>Assignment information of a physical route&apos;s locations, collectors, vehicles, and questions for a specific day</description>
    <fields>
        <fullName>Assigned_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Driver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Collector_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$Source.User__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Collector_3__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that last modified the collection status.</description>
        <inlineHelpText>The User that last modified the collection status.</inlineHelpText>
        <label>Collection Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Status_Last_Modified_Date__c</fullName>
        <description>The Date/Time the collection status was last modified.</description>
        <inlineHelpText>The Date/Time the collection status was last modified.</inlineHelpText>
        <label>Collection Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Status__c</fullName>
        <label>Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Incomplete</fullName>
                    <default>true</default>
                    <label>Collection Incomplete</label>
                </value>
                <value>
                    <fullName>COMPLETED COLLECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collector_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collector #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collector_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Admin only usage</description>
        <inlineHelpText>Admin only usage</inlineHelpText>
        <label>Collector #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountRoom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(Obsolete) Count Room</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Schedules</relationshipLabel>
        <relationshipName>Route_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Geolocation__c</fullName>
        <label>Current Geolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <description>Estimated time in minutes to arrive back to base</description>
        <inlineHelpText># of minutes to arrive back to base</inlineHelpText>
        <label>ETA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ending_Vehicle_Milage__c</fullName>
        <label>Ending Vehicle Milage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Record_Link__c</fullName>
        <description>Used as a helper for things like lightning email templates.</description>
        <formula>/*
 * Used as a help for things like lightning email templates.
 */
LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as a helper for things like lightning email templates.</inlineHelpText>
        <label>External Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fill_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that last modified the fill status.</description>
        <inlineHelpText>The user that last modified the fill status.</inlineHelpText>
        <label>Fill Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fill_Status_Last_Modified_Date__c</fullName>
        <description>The Date/Time the fill status was last modified.</description>
        <inlineHelpText>The Date/Time the fill status was last modified.</inlineHelpText>
        <label>Fill Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Missing_Vehicle_Start_Info_Display__c</fullName>
        <description>Yes if missing any vehicle info, otherwise No Meant to be used with CMT Related Lists (contains Unescaped Html as it&apos;s output to display a badge)</description>
        <formula>IF( Missing_Vehicle_Start_Info__c 
    ,&apos;&lt;span class=&quot;slds-badge slds-theme_error&quot;&gt;Yes&lt;/span&gt;&apos;
    ,&apos;&lt;span class=&quot;slds-badge slds-theme_success&quot;&gt;No&lt;/span&gt;&apos;
)</formula>
        <inlineHelpText>Yes  (in an error badge) if missing any vehicle info, otherwise No (in a success badge).</inlineHelpText>
        <label>Missing Vehicle Start Info Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Vehicle_Start_Info__c</fullName>
        <description>Used primarily for ui help to determine if vehicle data has been entered</description>
        <formula>/* =====================================
 * Checks to see of all vehicle data is entered.
 *
 * pseudo:
 *  If no value for one the below below the box.
 *   1. Vehicle Make (Vehicle__c)
 *   2. Assigned Driver
 *   3. Vehicle License
 *   4. Vehicle Mileage
 * =====================================
 */
OR( ISBLANK( TEXT(Vehicle__c) )
    ,ISBLANK( Assigned_Driver__c )
    ,ISBLANK( Starting_Vehicle_Milage__c )
    ,Starting_Vehicle_Milage__c == 0
    ,ISBLANK( Vehicle_License__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is any Vehicle information populated?</inlineHelpText>
        <label>Missing Vehicle / Start Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Location__c</fullName>
        <label>Processing Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that last modified the processing status.</description>
        <inlineHelpText>The user that last modified the processing status.</inlineHelpText>
        <label>Processing Status Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Status_Last_Modified_Date__c</fullName>
        <description>The Date/Time the processing status was last modified.</description>
        <inlineHelpText>The Date/Time the processing status was last modified.</inlineHelpText>
        <label>Processing Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing Incomplete</fullName>
                    <color>#FF6666</color>
                    <default>true</default>
                    <label>Processing Incomplete</label>
                </value>
                <value>
                    <fullName>COMPLETED PROCESSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Collection_Date__c</fullName>
        <description>Day Collection will take place</description>
        <label>Route Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Cycle_Number__c</fullName>
        <description>FF to Route__c.Cycle_Number__c</description>
        <formula>Route__r.Cycle_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Cycle Number of the associated route.</inlineHelpText>
        <label>(Rick obsolete??)Route Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_End_Email_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route End Email Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_End_Email_Sent_Date__c</fullName>
        <label>Route End Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_End_Timestamp__c</fullName>
        <description>The Date/Time the collector clicked the end route button</description>
        <inlineHelpText>The Date/Time the collector clicked the end route button, When this is set an email will be sent.</inlineHelpText>
        <label>Route End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_Fill_Date__c</fullName>
        <description>Not sure how this is used yet?</description>
        <inlineHelpText>Note sure how this is used yet?</inlineHelpText>
        <label>Route Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Start_Timestamp__c</fullName>
        <description>The Date/Time the collector clicked the start route button</description>
        <inlineHelpText>The Date/Time the collector clicked the start route button</inlineHelpText>
        <label>Route Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route to collect</description>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route Schedules</relationshipLabel>
        <relationshipName>Route_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <label>Fill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fill Incomplete</fullName>
                    <default>true</default>
                    <label>Fill Incomplete</label>
                </value>
                <value>
                    <fullName>COMPLETED FILL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starting_Vehicle_Milage__c</fullName>
        <label>Starting Vehicle Milage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <description>Total Accounts Associated with this Route_Schedule_c record. (Rollup Summary or Route_Schedule_Account__c_)</description>
        <inlineHelpText>Total Accounts Associated with this Route_Schedule_c record. (RS)</inlineHelpText>
        <label>Total Accounts</label>
        <summaryForeignKey>Route_Schedule_Account__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Collections__c</fullName>
        <label>Total Completed Collections</label>
        <summaryFilterItems>
            <field>Route_Processing_Sheet__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Fill_Processing_Sheets__c</fullName>
        <label>Total Completed Fill Processing Sheets</label>
        <summaryFilterItems>
            <field>Route_Processing_Sheet__c.Processing_Status__c</field>
            <operation>equals</operation>
            <value>COMPLETED FILL</value>
        </summaryFilterItems>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Meter_Readings__c</fullName>
        <description>The total # of meter readings for all route processing sheets associated with this route schedule.</description>
        <inlineHelpText>The total # of meter readings for all route processing sheets associated with this route schedule.</inlineHelpText>
        <label>Total Meter Readings</label>
        <summarizedField>Route_Processing_Sheet__c.Total_Meter_Readings__c</summarizedField>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Driven__c</fullName>
        <formula>Ending_Vehicle_Milage__c - Starting_Vehicle_Milage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Miles Driven</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Not_Yet_Filled_Processing_Sheets__c</fullName>
        <label>Total Not Yet Filled Processing Sheets</label>
        <summaryFilterItems>
            <field>Route_Processing_Sheet__c.Processing_Status__c</field>
            <operation>equals</operation>
            <value>Not Yet Filled</value>
        </summaryFilterItems>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Processing_Incomplete_RPS__c</fullName>
        <label>Total Processing Incomplete RPS</label>
        <summaryFilterItems>
            <field>Route_Processing_Sheet__c.Processing_Process_Status__c</field>
            <operation>equals</operation>
            <value>Processing Incomplete</value>
        </summaryFilterItems>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Processing_Sheets__c</fullName>
        <description>Total Processing Sheets generated by this schedule record. Rollup Summary of Route_Processing_Sheet__c</description>
        <inlineHelpText>Total Processing Sheets generated by this schedule record. (RS)</inlineHelpText>
        <label>Total Processing Sheets</label>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Route_Time_USE_FOR_REPORT_ONLY__c</fullName>
        <formula>(( Route_End_Timestamp__c -  Route_Start_Timestamp__c )*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Route Time(USE FOR REPORT ONLY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Route_Time__c</fullName>
        <formula>IF(

 OR( ISBLANK(Route_End_Timestamp__c) ,ISBLANK(Route_Start_Timestamp__c) )

, &quot;Start Time, End Time, or both are missing for this route&quot;, 

TEXT(
 ROUND((Route_End_Timestamp__c - Route_Start_Timestamp__c)*24,2)) &amp; &quot; hours&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Route Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Skipped_Collections__c</fullName>
        <label>Total Skipped Collections</label>
        <summaryFilterItems>
            <field>Route_Processing_Sheet__c.Status__c</field>
            <operation>equals</operation>
            <value>Skipped</value>
        </summaryFilterItems>
        <summaryForeignKey>Route_Processing_Sheet__c.Route_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collector #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_License__c</fullName>
        <label>Vehicle License</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Chevy</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Route Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Processing_Location__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Collections_Tomorrow_Springfield</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Springfield</value>
        </filters>
        <label>Collections Tomorrow Springfield</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Burr_Ridge</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>My Collections Today Burr Ridge</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Collinsvilles</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>My Collections Today Collinsvilles</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Peoria</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Peoria</value>
        </filters>
        <label>My Collections Today Peoria</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Rockford</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Rockford</value>
        </filters>
        <label>My Collections Today Rockford</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Springfield</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Springfield</value>
        </filters>
        <label>My Collections Today Springfield</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Today_Tinley_Park</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <label>My Collections Today Tinley Park</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Tomorrow_Burr_Ridge</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>My Collections Tomorrow Burr Ridge</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Tomorrow_Collinsville</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>My Collections Tomorrow Collinsville</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Tomorrow_Peoria</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Peoria</value>
        </filters>
        <label>My Collections Tomorrow Peoria</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Tomorrow_Rockford</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Rockford</value>
        </filters>
        <label>My Collections Tomorrow Rockford</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Tomorrow_Tinley_Park</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <columns>Total_Meter_Readings__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <label>My Collections Tomorrow Tinley Park</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>My Collections Yesterday</label>
    </listViews>
    <listViews>
        <fullName>My_Collections_Yesterday_Burr_Ridge</fullName>
        <columns>NAME</columns>
        <columns>Processing_Location__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Route_Fill_Date__c</columns>
        <columns>Route_Collection_Date__c</columns>
        <columns>Collection_Status__c</columns>
        <columns>Collector_1__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_License__c</columns>
        <columns>Total_Processing_Sheets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route_Collection_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>My Collections Yesterday Burr Ridge</label>
    </listViews>
    <nameField>
        <label>Route Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>